--- a/app/src/main/res/layout/joueurs.xml
+++ b/app/src/main/res/layout/joueurs.xml
@@ -2,11 +2,23 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent" android:layout_height="match_parent">
 
+
+
     <TextView
-        android:text="Joueurs"
+        android:text="Joueurs suivis"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/textView3" />
+        android:layout_marginTop="27dp"
+        android:id="@+id/textView5"
+        android:textSize="24sp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:id="@+id/playersList"
+        android:layout_marginTop="56dp" />
 </RelativeLayout>
