Facebook connection ok

--- a/app/src/main/res/layout/connection.xml
+++ b/app/src/main/res/layout/connection.xml
@@ -51,4 +51,13 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="80dp"
         android:id="@+id/txtConnection" />
+
+    <com.facebook.login.widget.LoginButton
+        android:id="@+id/login_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="21dp"
+        android:layout_below="@+id/btnConnection"
+        android:layout_centerHorizontal="true" />
 </RelativeLayout>
