--- a/app/src/main/res/layout/joueurs.xml
+++ b/app/src/main/res/layout/joueurs.xml
@@ -16,9 +16,19 @@
 
     <ListView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/playersList"
+        android:layout_above="@+id/btnAdd"
         android:layout_below="@+id/textView5"
         android:layout_alignParentStart="true"
-        android:id="@+id/playersList"
-        android:layout_marginTop="56dp" />
+        android:layout_marginTop="20dp" />
+
+    <Button
+        android:text="Ajouter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnAdd"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="17dp" />
 </RelativeLayout>
