--- a/app/src/main/res/layout/cherchermatch.xml
+++ b/app/src/main/res/layout/cherchermatch.xml
@@ -1,21 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
-
-    <TextView
-        android:text="Chercher match"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/match"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="15dp" />
+    android:orientation="vertical" android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <Button
-        android:text="Get Location"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:text="Rechercher"
+        android:id="@+id/btnRecherche"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Près de moi"
+        android:id="@+id/btnLocaliserMatchProche"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/btnRecherche" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePickerDebut"
+        android:layout_above="@+id/datePickerFin"
+        android:layout_toStartOf="@+id/btnLocaliserMatchProche"
+        android:layout_marginBottom="40dp" />
+
+    <DatePicker
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePickerFin"
         android:layout_centerVertical="true"
-        android:layout_centerHorizontal="true"
-        android:id="@+id/button" />
+        android:layout_toStartOf="@+id/btnLocaliserMatchProche" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/nbKilometre"
+        android:layout_above="@+id/btnRecherche"
+        android:layout_alignStart="@+id/datePickerFin"
+        android:layout_marginBottom="95dp"
+        android:layout_toStartOf="@+id/btnLocaliserMatchProche" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Déjà sur place?"
+        android:id="@+id/textView6"
+        android:layout_alignBaseline="@+id/btnLocaliserMatchProche"
+        android:layout_alignBottom="@+id/btnLocaliserMatchProche"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="Recherche"
+        android:id="@+id/textView7"
+        android:layout_below="@+id/btnLocaliserMatchProche"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Date de début :"
+        android:id="@+id/textView8"
+        android:layout_alignBottom="@+id/datePickerDebut"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Date de fin :"
+        android:id="@+id/textView9"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Rayon (km) :"
+        android:id="@+id/textView10"
+        android:layout_alignBottom="@+id/nbKilometre"
+        android:layout_alignParentStart="true" />
+
 </RelativeLayout>
