--- a/app/src/main/res/layout/cherchermatch.xml
+++ b/app/src/main/res/layout/cherchermatch.xml
@@ -19,31 +19,15 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/btnRecherche" />
 
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePickerDebut"
-        android:layout_above="@+id/datePickerFin"
-        android:layout_toStartOf="@+id/btnLocaliserMatchProche"
-        android:layout_marginBottom="40dp" />
-
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePickerFin"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/btnLocaliserMatchProche" />
-
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:inputType="number"
         android:ems="10"
         android:id="@+id/nbKilometre"
-        android:layout_above="@+id/btnRecherche"
-        android:layout_alignStart="@+id/datePickerFin"
-        android:layout_marginBottom="95dp"
-        android:layout_toStartOf="@+id/btnLocaliserMatchProche" />
+        android:layout_below="@+id/textView9"
+        android:layout_alignEnd="@+id/btnLocaliserMatchProche"
+        android:layout_marginTop="68dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -70,8 +54,9 @@
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Date de début :"
         android:id="@+id/textView8"
-        android:layout_alignBottom="@+id/datePickerDebut"
-        android:layout_alignParentStart="true" />
+        android:layout_above="@+id/textView9"
+        android:layout_alignParentStart="true"
+        android:layout_marginBottom="43dp" />
 
     <TextView
         android:layout_width="wrap_content"
@@ -90,5 +75,23 @@
         android:id="@+id/textView10"
         android:layout_alignBottom="@+id/nbKilometre"
         android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="10"
+        android:id="@+id/dateDebut"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_alignStart="@+id/nbKilometre" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="date"
+        android:ems="10"
+        android:id="@+id/dateFin"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/dateDebut" />
 
 </RelativeLayout>
