--- a/app/src/main/res/layout/result_recherche_frag.xml
+++ b/app/src/main/res/layout/result_recherche_frag.xml
@@ -27,13 +27,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridViewRecherche"
-        android:layout_below="@+id/textView11"
-        android:layout_marginTop="33dp"
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:id="@+id/listViewResult"
         android:layout_above="@+id/btnNouvelleRecherche"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/textView11" />
 
 </RelativeLayout>
