suivi equipe ok

--- a/app/src/main/res/layout/equipes.xml
+++ b/app/src/main/res/layout/equipes.xml
@@ -3,11 +3,30 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:text="Equipes"
+        android:text="Equipes suivies"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="230dp"
-        android:id="@+id/textView2" />
+        android:layout_marginTop="27dp"
+        android:id="@+id/textView5"
+        android:textSize="24sp" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/teamsList"
+        android:layout_above="@+id/btnAddTeam"
+        android:layout_below="@+id/textView5"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="20dp" />
+
+    <Button
+        android:text="Ajouter"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnAddTeam"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginBottom="17dp" />
 </RelativeLayout>
