--- a/app/src/main/res/layout/disconnection.xml
+++ b/app/src/main/res/layout/disconnection.xml
@@ -75,4 +75,12 @@
         android:layout_alignParentBottom="true"
         android:layout_alignEnd="@+id/txtConnected" />
 
+    <Button
+        android:text="Modifier"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/btnDisconnect"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/btnModify" />
+
 </RelativeLayout>
