--- a/app/src/main/res/layout/activity_update_login.xml
+++ b/app/src/main/res/layout/activity_update_login.xml
@@ -10,63 +10,6 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="com.example.denis.mystadium.updateLoginActivity">
 
-    <TextView
-        android:text="Prénom:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="69dp"
-        android:id="@+id/txtUpdatePrenom" />
-
-    <TextView
-        android:text="Nom:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/txtUpdatePrenom"
-        android:layout_alignStart="@+id/txtUpdatePrenom"
-        android:layout_marginTop="67dp"
-        android:id="@+id/textView7" />
-
-    <TextView
-        android:text="Mail:"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/txtUpdateMail"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/textView7" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/txtUpdatePrenom"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="58dp"
-        android:id="@+id/editPrenom" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_below="@+id/editPrenom"
-        android:layout_alignStart="@+id/editPrenom"
-        android:layout_marginTop="35dp"
-        android:id="@+id/editNom" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:ems="10"
-        android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/editNom"
-        android:id="@+id/editMail" />
-
     <Button
         android:text="Valider"
         android:layout_width="wrap_content"
@@ -75,4 +18,63 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="56dp"
         android:id="@+id/btnValidateUpdate" />
+
+    <TextView
+        android:text="Mail:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/textView2"
+        android:layout_centerVertical="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:text="Name"
+        android:ems="10"
+        android:id="@+id/editMail"
+        android:layout_alignBaseline="@+id/textView2"
+        android:layout_alignBottom="@+id/textView2"
+        android:layout_toEndOf="@+id/txtUpdatePrenom" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editNom"
+        android:layout_marginTop="32dp"
+        android:layout_below="@+id/editPrenom"
+        android:layout_toEndOf="@+id/txtUpdatePrenom" />
+
+    <TextView
+        android:text="Nom:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtUpdateNom"
+        android:layout_alignBaseline="@+id/editNom"
+        android:layout_alignBottom="@+id/editNom"
+        android:layout_alignParentStart="true" />
+
+    <TextView
+        android:text="Prénom:"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/txtUpdatePrenom"
+        android:layout_marginTop="32dp"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/editPrenom"
+        android:layout_alignBaseline="@+id/txtUpdatePrenom"
+        android:layout_alignBottom="@+id/txtUpdatePrenom"
+        android:layout_toEndOf="@+id/txtUpdatePrenom" />
+
+
 </RelativeLayout>
