--- a/app/src/main/res/layout/activity_result_recherche_match.xml
+++ b/app/src/main/res/layout/activity_result_recherche_match.xml
@@ -27,13 +27,12 @@
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true" />
 
-    <GridView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/gridViewRecherche"
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_below="@+id/textView11"
-        android:layout_marginTop="33dp"
         android:layout_above="@+id/btnNouvelleRecherche"
-        android:layout_alignParentStart="true" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/listViewResult" />
 
 </RelativeLayout>
