--- a/app/src/main/res/layout/cherchermatch.xml
+++ b/app/src/main/res/layout/cherchermatch.xml
@@ -19,32 +19,6 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/btnRecherche" />
 
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePickerDebut"
-        android:layout_above="@+id/datePickerFin"
-        android:layout_toStartOf="@+id/btnLocaliserMatchProche"
-        android:layout_marginBottom="40dp" />
-
-    <DatePicker
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/datePickerFin"
-        android:layout_centerVertical="true"
-        android:layout_toStartOf="@+id/btnLocaliserMatchProche" />
-
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/nbKilometre"
-        android:layout_above="@+id/btnRecherche"
-        android:layout_alignStart="@+id/datePickerFin"
-        android:layout_marginBottom="95dp"
-        android:layout_toStartOf="@+id/btnLocaliserMatchProche" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -68,15 +42,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Date de début :"
-        android:id="@+id/textView8"
-        android:layout_alignBottom="@+id/datePickerDebut"
-        android:layout_alignParentStart="true" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Date de fin :"
         android:id="@+id/textView9"
         android:layout_centerVertical="true"
@@ -90,5 +55,60 @@
         android:id="@+id/textView10"
         android:layout_alignBottom="@+id/nbKilometre"
         android:layout_alignParentStart="true" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Date de début :"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="71dp" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="number"
+        android:ems="10"
+        android:id="@+id/nbKilometre"
+        android:layout_below="@+id/editText3"
+        android:layout_alignEnd="@+id/btnLocaliserMatchProche"
+        android:layout_marginTop="47dp" />
+
+    <Button
+        android:text="Choisir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnChoisirDateDebut"
+        android:layout_alignBaseline="@+id/textView8"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Choisir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnChoisirDateFin"
+        android:layout_centerVertical="true"
+        android:layout_alignStart="@+id/btnChoisirDateDebut" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePickerDebut"
+        android:layout_alignStart="@+id/btnLocaliserMatchProche"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/btnChoisirDateDebut"
+        android:layout_alignTop="@+id/textView8" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/datePickerDebut"
+        android:id="@+id/datePickerFin"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/btnChoisirDateFin"
+        android:layout_alignTop="@+id/textView9" />
 
 </RelativeLayout>
