--- a/app/src/main/res/layout/activity_before_match.xml
+++ b/app/src/main/res/layout/activity_before_match.xml
@@ -202,7 +202,7 @@
         android:text="Voir classement"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/button"
+        android:id="@+id/btnViewClassement"
         android:layout_alignBaseline="@+id/txtCategorie"
         android:layout_alignBottom="@+id/txtCategorie"
         android:layout_toEndOf="@+id/textView20" />
@@ -211,7 +211,7 @@
         android:text="TextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/button"
+        android:layout_below="@+id/btnViewClassement"
         android:layout_alignStart="@+id/txtCategorie"
         android:layout_marginTop="26dp"
         android:id="@+id/txtNomStade" />
