--- a/app/src/main/res/layout/list_recherche_frag.xml
+++ b/app/src/main/res/layout/list_recherche_frag.xml
@@ -9,51 +9,61 @@
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="162dp"
-        android:layout_weight="0.09">
+        android:layout_weight="0.30"
+        android:background="@drawable/resultrechercheshape">
 
         <TextView
             android:text="1 janvier 10:00"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_centerHorizontal="true"
             android:layout_marginTop="28dp"
-            android:id="@+id/txtDateTime" />
+            android:id="@+id/txtDateTime"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:textAlignment="center" />
 
         <TextView
             android:text="AS HOUTAIN"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="45dp"
+            android:id="@+id/txtEquipeDomicile"
             android:layout_below="@+id/txtDateTime"
-            android:layout_toStartOf="@+id/txtDateTime"
-            android:layout_marginEnd="26dp"
-            android:layout_marginTop="21dp"
-            android:id="@+id/txtEquipeDomicile" />
+            android:layout_alignParentStart="true"
+            android:layout_toStartOf="@+id/txtScore"
+            android:layout_above="@+id/btnVoirMatch"
+            android:textAlignment="textEnd" />
 
         <TextView
             android:text="0-5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txtScore"
-            android:layout_alignBaseline="@+id/txtEquipeDomicile"
-            android:layout_alignBottom="@+id/txtEquipeDomicile"
-            android:layout_centerHorizontal="true" />
+            android:layout_below="@+id/txtDateTime"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="18dp" />
 
         <TextView
             android:text="AUBEL FC"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignBottom="@+id/txtScore"
-            android:layout_toEndOf="@+id/txtDateTime"
-            android:id="@+id/txtEquipeExtérieure" />
+            android:id="@+id/txtEquipeExtérieure"
+            android:layout_alignParentEnd="true"
+            android:layout_toEndOf="@+id/txtScore"
+            android:layout_above="@+id/btnVoirMatch"
+            android:layout_alignTop="@+id/txtEquipeDomicile"
+            android:textAlignment="textStart" />
 
         <TextView
             android:text="Rue de Wonck 21 Houtain"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:layout_centerHorizontal="true"
-            android:id="@+id/txtAdresse" />
+            android:id="@+id/txtAdresse"
+            android:layout_alignEnd="@+id/txtEquipeExtérieure"
+            android:layout_alignParentStart="true"
+            android:textAlignment="center" />
 
         <Button
             android:text="Voir détails du match"
@@ -62,7 +72,8 @@
             android:id="@+id/btnVoirMatch"
             android:layout_above="@+id/txtAdresse"
             android:layout_centerHorizontal="true"
-            android:layout_marginBottom="17dp" />
+            android:layout_marginBottom="17dp"
+            android:background="#FEFEFE"/>
 
     </RelativeLayout>
 </LinearLayout>
