--- a/app/src/main/res/layout/list_recherche_frag.xml
+++ b/app/src/main/res/layout/list_recherche_frag.xml
@@ -24,7 +24,7 @@
             android:textAlignment="center" />
 
         <TextView
-            android:text="AS HOUTAIN"
+            android:text="Entente mELEN mICHEROUX OUAI OUAI OUAI"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
@@ -33,7 +33,7 @@
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@+id/txtScore"
             android:layout_above="@+id/btnVoirMatch"
-            android:textAlignment="textEnd" />
+            android:textAlignment="gravity" />
 
         <TextView
             android:text="0-5"
@@ -42,10 +42,11 @@
             android:id="@+id/txtScore"
             android:layout_below="@+id/txtDateTime"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp" />
+            android:layout_marginTop="18dp"
+            android:textSize="30px" />
 
         <TextView
-            android:text="AUBEL FC"
+            android:text="Entente melen micheroux ouai ouai ouai ouai"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/txtEquipeExtérieure"
@@ -53,7 +54,7 @@
             android:layout_toEndOf="@+id/txtScore"
             android:layout_above="@+id/btnVoirMatch"
             android:layout_alignTop="@+id/txtEquipeDomicile"
-            android:textAlignment="textStart" />
+            android:textAlignment="textEnd" />
 
         <TextView
             android:text="Rue de Wonck 21 Houtain"
