--- a/app/src/main/res/layout/list_recherche_frag.xml
+++ b/app/src/main/res/layout/list_recherche_frag.xml
@@ -6,26 +6,38 @@
     android:weightSum="1">
 
 
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="162dp"
-        android:layout_weight="0.30"
-        android:background="@drawable/resultrechercheshape">
-
-        <TextView
+     <TextView
             android:text="1 janvier 10:00"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
             android:layout_marginTop="28dp"
             android:id="@+id/txtDateTime"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+         android:layout_weight="0.08" />
 
-        <TextView
+     <LinearLayout
+         android:orientation="horizontal"
+         android:layout_width="match_parent"
+         android:layout_height="wrap_content"
+         android:layout_weight="0.06">
+
+          <TextView
+              android:text="0-5"
+              android:layout_width="70dp"
+              android:layout_height="wrap_content"
+              android:id="@+id/txtScore"
+              android:layout_below="@+id/txtDateTime"
+              android:layout_centerHorizontal="true"
+              android:layout_marginTop="18dp"
+              android:textSize="30px" />
+     </LinearLayout>
+
+     <TextView
             android:text="Entente mELEN mICHEROUX OUAI OUAI OUAI"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="45dp"
             android:id="@+id/txtEquipeDomicile"
@@ -33,48 +45,42 @@
             android:layout_alignParentStart="true"
             android:layout_toStartOf="@+id/txtScore"
             android:layout_above="@+id/btnVoirMatch"
-            android:textAlignment="gravity" />
+            android:textAlignment="gravity"
+         android:layout_weight="0.05" />
 
-        <TextView
-            android:text="0-5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtScore"
-            android:layout_below="@+id/txtDateTime"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="18dp"
-            android:textSize="30px" />
-
-        <TextView
+     <TextView
             android:text="Entente melen micheroux ouai ouai ouai ouai"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/txtEquipeExtérieure"
             android:layout_alignParentEnd="true"
             android:layout_toEndOf="@+id/txtScore"
             android:layout_above="@+id/btnVoirMatch"
             android:layout_alignTop="@+id/txtEquipeDomicile"
-            android:textAlignment="textEnd" />
+            android:textAlignment="textEnd"
+         android:layout_weight="0.04" />
 
-        <TextView
+     <TextView
             android:text="Rue de Wonck 21 Houtain"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:id="@+id/txtAdresse"
             android:layout_alignEnd="@+id/txtEquipeExtérieure"
             android:layout_alignParentStart="true"
-            android:textAlignment="center" />
+            android:textAlignment="center"
+         android:layout_weight="0.04" />
 
-        <Button
+     <Button
             android:text="Voir détails du match"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/btnVoirMatch"
             android:layout_above="@+id/txtAdresse"
             android:layout_centerHorizontal="true"
+            android:layout_marginTop="15dp"
             android:layout_marginBottom="17dp"
-            android:background="#FEFEFE"/>
+            android:background="#FEFEFE" />
 
-    </RelativeLayout>
+
 </LinearLayout>
