--- a/app/src/main/res/layout/cherchermatch.xml
+++ b/app/src/main/res/layout/cherchermatch.xml
@@ -19,16 +19,6 @@
         android:layout_alignParentTop="true"
         android:layout_toEndOf="@+id/btnRecherche" />
 
-    <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="number"
-        android:ems="10"
-        android:id="@+id/nbKilometre"
-        android:layout_below="@+id/textView9"
-        android:layout_alignEnd="@+id/btnLocaliserMatchProche"
-        android:layout_marginTop="68dp" />
-
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -52,16 +42,6 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:text="Date de début :"
-        android:id="@+id/textView8"
-        android:layout_above="@+id/textView9"
-        android:layout_alignParentStart="true"
-        android:layout_marginBottom="43dp" />
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="Date de fin :"
         android:id="@+id/textView9"
         android:layout_centerVertical="true"
@@ -76,22 +56,59 @@
         android:layout_alignBottom="@+id/nbKilometre"
         android:layout_alignParentStart="true" />
 
-    <EditText
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="date"
-        android:ems="10"
-        android:id="@+id/dateDebut"
-        android:layout_alignBottom="@+id/textView8"
-        android:layout_alignStart="@+id/nbKilometre" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="Date de début :"
+        android:id="@+id/textView8"
+        android:layout_below="@+id/textView7"
+        android:layout_alignParentStart="true"
+        android:layout_marginTop="71dp" />
 
     <EditText
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:inputType="date"
+        android:inputType="number"
         android:ems="10"
-        android:id="@+id/dateFin"
+        android:id="@+id/nbKilometre"
+        android:layout_below="@+id/editText3"
+        android:layout_alignEnd="@+id/btnLocaliserMatchProche"
+        android:layout_marginTop="47dp" />
+
+    <Button
+        android:text="Choisir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnChoisirDateDebut"
+        android:layout_alignBaseline="@+id/textView8"
+        android:layout_alignBottom="@+id/textView8"
+        android:layout_centerHorizontal="true" />
+
+    <Button
+        android:text="Choisir"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnChoisirDateFin"
         android:layout_centerVertical="true"
-        android:layout_alignStart="@+id/dateDebut" />
+        android:layout_alignStart="@+id/btnChoisirDateDebut" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/datePickerDebut"
+        android:layout_alignStart="@+id/btnLocaliserMatchProche"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/btnChoisirDateDebut"
+        android:layout_alignTop="@+id/textView8" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/datePickerDebut"
+        android:id="@+id/datePickerFin"
+        android:layout_alignParentEnd="true"
+        android:layout_alignBottom="@+id/btnChoisirDateFin"
+        android:layout_alignTop="@+id/textView9" />
 
 </RelativeLayout>
