--- a/app/src/main/res/layout/result_recherche_frag.xml
+++ b/app/src/main/res/layout/result_recherche_frag.xml
@@ -1,15 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:orientation="horizontal"
     tools:context="com.example.denis.mystadium.ResultRechercheMatch">
 
-    <Button
+
+
+        <fragment
+            android:tag="lstfrag"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+
+            android:name="com.example.denis.mystadium.FragmentListRecherche"
+            android:id="@+id/fragmentrecherche"
+            tools:layout="@layout/list_recherche_frag"
+             />
+
+
+    <!--<Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Nouvelle recherche"
@@ -30,9 +40,9 @@
     <ListView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/listViewResult"
+        android:layout_below="@+id/textView11"
         android:layout_above="@+id/btnNouvelleRecherche"
-        android:layout_alignParentEnd="true"
-        android:layout_below="@+id/textView11" />
+        android:layout_alignParentStart="true"
+        android:id="@+id/listViewResult" />-->
 
-</RelativeLayout>
+</LinearLayout>
