--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,6 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#ff4081</color>
     <color name="gris">#FEC95F</color>
+    <color name="bleuclairapp">#06CEBF</color>
+    <color name="bleufonceapp">#0787D8</color>
 </resources>
