--- a/app/src/main/res/drawable/resultrechercheshape.xml
+++ b/app/src/main/res/drawable/resultrechercheshape.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- we define background color -->
-    <solid android:color="#FEB201" />
+
 
     <!-- we define border color and thick -->
     <stroke
@@ -15,7 +15,11 @@
         android:right="5dp"
         android:top="5dp" />
 
-
+    <gradient
+        android:angle="135"
+        android:endColor="@color/bleufonceapp"
+        android:startColor="@color/bleuclairapp"
+        android:type="linear" />
     <!-- we define corner radius, note that radius can be different for each corner -->
     <corners android:radius="5dp" />
 </shape>
