--- a/app/src/main/res/layout/list_recherche_frag.xml
+++ b/app/src/main/res/layout/list_recherche_frag.xml
@@ -12,7 +12,12 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:background="@drawable/resultrechercheshape"
-        android:weightSum="1">
+        android:weightSum="1"
+        android:layout_marginBottom="8dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
+        >
 
 
 
